--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
 /*
-Theme Name: Israel IT
+Theme Name: ISRAEL IT
 Theme URI: https://www.israelitcenter.com/
-Author: Kostya Tereshchuk
-Author URI: https://wordpress.org/support/users/kostyatereshchuk/
 Description: Israel IT starter theme based on Bootstrap 4.
 Version: 1.0
 Text Domain: israelit
