--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 /*
 Theme Name: ISRAEL IT
 Theme URI: https://www.israelitcenter.com/
+Author: ISRAEL IT
+Author URI: https://www.israelitcenter.com/
 Description: Israel IT starter theme based on Bootstrap 4.
 Version: 1.0
 Text Domain: israelit
