--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ Theme Name: ISRAEL IT
 Theme URI: https://www.israelitcenter.com/
 Author: ISRAEL IT
 Author URI: https://www.israelitcenter.com/
-Description: Starter theme to create new sites.
+Description: Starter theme to create new websites.
 Version: 1.0
 Text Domain: israelit
 */
