--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@
     url(../fonts/OpenSansHebrew-LightItalic.woff2) format('woff2'),
     url(../fonts/OpenSansHebrew-LightItalic.woff) format('woff'),
     url(../fonts/OpenSansHebrew-LightItalic.ttf) format('truetype');
+    font-display: swap;
 }
 @font-face {
     font-family: 'Open Sans Hebrew';
@@ -17,6 +18,7 @@
     url(../fonts/OpenSansHebrew-Light.woff2) format('woff2'),
     url(../fonts/OpenSansHebrew-Light.woff) format('woff'),
     url(../fonts/OpenSansHebrew-Light.ttf) format('truetype');
+    font-display: swap;
 }
 @font-face {
     font-family: 'Open Sans Hebrew';
@@ -27,6 +29,7 @@
     url(../fonts/OpenSansHebrew-Italic.woff2) format('woff2'),
     url(../fonts/OpenSansHebrew-Italic.woff) format('woff'),
     url(../fonts/OpenSansHebrew-Italic.ttf) format('truetype');
+    font-display: swap;
 }
 @font-face {
     font-family: 'Open Sans Hebrew';
@@ -37,6 +40,7 @@
     url(../fonts/OpenSansHebrew-Regular.woff2) format('woff2'),
     url(../fonts/OpenSansHebrew-Regular.woff) format('woff'),
     url(../fonts/OpenSansHebrew-Regular.ttf) format('truetype');
+    font-display: swap;
 }
 @font-face {
     font-family: 'Open Sans Hebrew';
@@ -47,6 +51,7 @@
     url(../fonts/OpenSansHebrew-BoldItalic.woff2) format('woff2'),
     url(../fonts/OpenSansHebrew-BoldItalic.woff) format('woff'),
     url(../fonts/OpenSansHebrew-BoldItalic.ttf) format('truetype');
+    font-display: swap;
 }
 @font-face {
     font-family: 'Open Sans Hebrew';
@@ -57,6 +62,7 @@
     url(../fonts/OpenSansHebrew-Bold.woff2) format('woff2'),
     url(../fonts/OpenSansHebrew-Bold.woff) format('woff'),
     url(../fonts/OpenSansHebrew-Bold.ttf) format('truetype');
+    font-display: swap;
 }
 @font-face {
     font-family: 'Open Sans Hebrew';
@@ -67,6 +73,7 @@
     url(../fonts/OpenSansHebrew-ExtraBoldItalic.woff2) format('woff2'),
     url(../fonts/OpenSansHebrew-ExtraBoldItalic.woff) format('woff'),
     url(../fonts/OpenSansHebrew-ExtraBoldItalic.ttf) format('truetype');
+    font-display: swap;
 }
 @font-face {
     font-family: 'Open Sans Hebrew';
@@ -77,6 +84,7 @@
     url(../fonts/OpenSansHebrew-ExtraBold.woff2) format('woff2'),
     url(../fonts/OpenSansHebrew-ExtraBold.woff) format('woff'),
     url(../fonts/OpenSansHebrew-ExtraBold.ttf) format('truetype');
+    font-display: swap;
 }
 
 
