Set default template One Column

--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*
 Theme Name: ISRAEL IT
-Theme URI: https://www.israelitcenter.com/
+Theme URI: https://israelit.pro/
 Author: ISRAEL IT
-Author URI: https://www.israelitcenter.com/
-Description: Starter theme to create new websites.
+Author URI: https://israelit.pro/
+Description: ISRAEL IT starter theme to create new websites.
 Version: 1.0
 Text Domain: israelit
 */
